Fix Ore Dictionary

--- a/src/main/resources/assets/storagedrawersunlimited/lang/en_us.lang
+++ b/src/main/resources/assets/storagedrawersunlimited/lang/en_us.lang
@@ -1,4 +1,4 @@
-itemGroup.storagedrawersunlimited=Storage Drawers Unlimited
+itemGroup.storagedrawersunlimited=Storage Drawers Unlimited Fixed
 storagedrawers.mod=Mod: %s
 storagedrawers.trim=%1$s %2$s
 tile.storagedrawers.trim.name=Trim
